@@ -1,3 +1,7 @@
+2019-01-05  Carl Hetherington  <cth@carlh.net>
+
+	* Fix strange behaviour with single-frame fades.
+
 2018-12-29  Carl Hetherington  <cth@carlh.net>
 
 	* Updated fr_FR translation from Thierry Journet.
